# pixel_game

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
pixel_game/data/: settings.json
pixel_game/logic/: Pixel.py  game_logic.py  walls.py
pixel_game/menu/: main_menu.py  pixel_config.py  settings.py
tests/: test_settings.py
